# ros2_craneSim_SoFaR_UniGe

./: .gitignore  README.md
ros2_craneSim_SoFaR_UniGe/: package.xml  setup.cfg  setup.py
ros2_craneSim_SoFaR_UniGe/launch/: ros2_craneSim_SoFaR_UniGe.launch.py
ros2_craneSim_SoFaR_UniGe/ros2_craneSim_SoFaR_UniGe/: crane_sim_node.py  motor_x_controller.py  motor_y_controller.py  robot_logic.py
ros2_craneSim_SoFaR_UniGe/ros2_craneSim_SoFaR_UniGe/lib/: crane_sim.py
